--- a/src/scss/global/_global.scss
+++ b/src/scss/global/_global.scss
@@ -11,3 +11,9 @@ body {
 body {
   font-family: Arial, Helvetica, sans-serif;
 }
+
+#root {
+  background-color: blue;
+  width: 100%;
+  height: 100vh;
+}
