--- a/src/scss/components/_break-modal.scss
+++ b/src/scss/components/_break-modal.scss
@@ -1,16 +1,48 @@
 .break-container {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+
   display: flex;
   flex-direction: column;
-  flex-wrap: wrap;
+  justify-content: space-evenly;
   align-items: center;
-  justify-content: center;
-  background-color: red;
-  z-index: 2;
+  min-width: 100%;
+  min-height: 30vh;
+  background-color: #b88e8d;
+  border-radius: calculateRem(25);
+
+  @media screen and(min-width:320px) {
+    min-width: 80%;
+  }
+  @media screen and(min-width:500px) {
+    min-width: 60%;
+  }
+  @media screen and(min-width:800px) {
+    min-width: 40%;
+  }
+  @media screen and(min-width:1400px) {
+    min-width: 30%;
+  }
 
   .break-timer {
     display: flex;
     flex-direction: row;
+    h2 {
+      padding: 0 calculateRem(10) 0 calculateRem(10);
+      text-align: center;
+    }
+    button {
+      padding: 0 calculateRem(5) 0 calculateRem(5);
+      font-size: calculateRem(18);
+    }
+  }
+
+  .modal-buttons {
+    display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: space-evenly;
+    width: 100%;
   }
 }
