--- a/src/scss/global/_global.scss
+++ b/src/scss/global/_global.scss
@@ -13,7 +13,24 @@ body {
 }
 
 #root {
-  background-color: #34435e;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
   width: 100%;
   height: 100vh;
+  background-color: #34435e;
+  color: $white;
+}
+
+.title {
+  text-align: center;
+  min-width: 80%;
+  border-bottom: 2px solid $white;
+  @media screen and(min-width:768px) {
+    min-width: 40%;
+  }
+  @media screen and(min-width:1240px) {
+    min-width: 30%;
+  }
 }
