--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,5 +1,8 @@
+@import "./helpers/variables";
 @import "./helpers/functions";
 
 @import "./global/global";
 
+@import "./components/timer";
 @import "./components/break-modal";
+@import "./components/buttons";
