--- a/src/scss/components/_timer.scss
+++ b/src/scss/components/_timer.scss
@@ -3,12 +3,13 @@
   align-items: center;
   h2 {
     font-size: calculateRem(90);
-    padding: 0 calculateRem(10) 0 calculateRem(10);
+    padding: 0 calculateRem(15) 0 calculateRem(15);
   }
   button {
-    padding: 0 calculateRem(10) 0 calculateRem(10);
+    padding: calculateRem(10);
     font-size: calculateRem(18);
-    background-color: transparent;
+    background-color: #b88e8d;
     border: none;
+    border-radius: 50%;
   }
 }
