Add icon components + style: buttons

--- a/src/scss/components/_buttons.scss
+++ b/src/scss/components/_buttons.scss
@@ -4,11 +4,13 @@
   align-items: center;
   width: 100%;
   button {
+    display: flex;
     padding: calculateRem(10) calculateRem(20) calculateRem(10) calculateRem(20);
     background-color: #b88e8d;
     border: none;
     border-radius: calculateRem(8);
     font-size: calculateRem(18);
     color: $white;
+    cursor: pointer;
   }
 }
