--- a/src/scss/components/_timer.scss
+++ b/src/scss/components/_timer.scss
@@ -12,5 +12,13 @@
     font-size: calculateRem(18);
     background-color: #b88e8d;
     cursor: pointer;
+    .addButton,
+    .minusButton {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      width: calculateRem(35);
+      height: calculateRem(35);
+    }
   }
 }
