--- a/src/scss/components/_break-modal.scss
+++ b/src/scss/components/_break-modal.scss
@@ -9,7 +9,7 @@
   justify-content: space-evenly;
   align-items: center;
   min-width: 100%;
-  min-height: 30vh;
+  min-height: 40vh;
   background-color: #b88e8d;
   border-radius: calculateRem(25);
 
@@ -20,12 +20,15 @@
   //#610345 - #107e7d
 
   @media screen and(min-width:320px) {
+    min-width: 90%;
+  }
+  @media screen and(min-width:460px) {
     min-width: 80%;
   }
-  @media screen and(min-width:500px) {
+  @media screen and(min-width:600px) {
     min-width: 60%;
   }
-  @media screen and(min-width:800px) {
+  @media screen and(min-width:900px) {
     min-width: 40%;
   }
   @media screen and(min-width:1400px) {
@@ -42,10 +45,11 @@
       font-size: calculateRem(40);
     }
     button {
-      padding: 0 calculateRem(10) 0 calculateRem(10);
-      font-size: calculateRem(18);
+      padding: calculateRem(10);
       background-color: transparent;
       border: 1px solid black;
+      border-radius: 50%;
+      font-size: calculateRem(18);
       .addButton,
       .minusButton {
         display: flex;
@@ -60,13 +64,14 @@
   .modal-buttons {
     display: flex;
     align-items: center;
-    // justify-content: space-evenly;
     justify-content: space-around;
     width: 100%;
     button {
-      padding: calculateRem(5) calculateRem(10) calculateRem(5) calculateRem(10);
+      padding: calculateRem(10) calculateRem(20) calculateRem(10)
+        calculateRem(20);
       background-color: transparent;
       border: 1px solid black;
+      border-radius: calculateRem(8);
     }
   }
 }
