--- a/src/scss/global/_global.scss
+++ b/src/scss/global/_global.scss
@@ -19,7 +19,7 @@ body {
   align-items: center;
   width: 100%;
   height: 100vh;
-  background-color: #34435e;
+  background-color: $primary;
   color: $white;
 }
 
