--- a/src/scss/components/_break-modal.scss
+++ b/src/scss/components/_break-modal.scss
@@ -10,14 +10,19 @@
   align-items: center;
   min-width: 100%;
   min-height: 40vh;
-  background-color: #b88e8d;
+  background-color: $secondary;
   border-radius: calculateRem(25);
+  color: $white;
+  box-shadow: 1px 5px 40px 15px rgba($black, 0.5);
 
-  //#34435e - #b88e8d - D8D2E1 - 60E1E0 - 6369D1
+  -webkit-transition: 0.3s ease-in-out;
+  -moz-transition: 0.3s ease-in-out;
+  -o-transition: 0.3s ease-in-out;
+  transition: 0.3s ease-in-out;
 
-  //#593c8f - #8ef9f3 - FFD9CE - 171738
-
-  //#610345 - #107e7d
+  &:hover {
+    box-shadow: 1px 5px 40px 15px rgba($black, 0.8);
+  }
 
   @media screen and(min-width:320px) {
     min-width: 90%;
@@ -46,10 +51,21 @@
     }
     button {
       padding: calculateRem(10);
-      background-color: transparent;
-      border: 1px solid black;
+      background-color: $primary;
+      border: none;
       border-radius: 50%;
       font-size: calculateRem(18);
+      cursor: pointer;
+
+      -webkit-transition: 0.3s ease-in-out;
+      -moz-transition: 0.3s ease-in-out;
+      -o-transition: 0.3s ease-in-out;
+      transition: 0.3s ease-in-out;
+
+      &:hover {
+        background-color: $primaryLight;
+      }
+
       .addButton,
       .minusButton {
         display: flex;
@@ -69,9 +85,21 @@
     button {
       padding: calculateRem(10) calculateRem(20) calculateRem(10)
         calculateRem(20);
-      background-color: transparent;
-      border: 1px solid black;
+      border: 3px solid $primary;
       border-radius: calculateRem(8);
+      background-color: $primary;
+      color: $white;
+      font-size: calculateRem(18);
+      cursor: pointer;
+
+      -webkit-transition: 0.3s ease-in-out;
+      -moz-transition: 0.3s ease-in-out;
+      -o-transition: 0.3s ease-in-out;
+      transition: 0.3s ease-in-out;
+
+      &:hover {
+        background-color: $primaryLight;
+      }
     }
   }
 }
